@@ -4,18 +4,21 @@ data:extend {
         name = "jq-use-extra-bonuses",
         setting_type = "startup",
         default_value = false,
+        order = "a",
     },
     {
         type = "bool-setting",
         name = "jq-show-player-programming-recipes",
         setting_type = "startup",
         default_value = false,
+        order = "b",
     },
     {
         type = "bool-setting",
         name = "jq-alt-overlay",
         setting_type = "startup",
         default_value = false,
+        order = "c",
     },
     {
         type = "string-setting",
@@ -23,27 +26,7 @@ data:extend {
         setting_type = "startup",
         default_value = "",
         allow_blank = true,
-    },
-    {
-        type = "string-setting",
-        name = "jq-quality-no-quality-items",
-        setting_type = "startup",
-        default_value = "",
-        allow_blank = true,
-    },
-    {
-        type = "string-setting",
-        name = "jq-quality-no-quality-groups",
-        setting_type = "startup",
-        default_value = "",
-        allow_blank = true,
-    },
-    {
-        type = "string-setting",
-        name = "jq-quality-no-quality-subgroups",
-        setting_type = "startup",
-        default_value = "",
-        allow_blank = true,
+        order = "d",
     },
     {
         type = "double-setting",
@@ -52,11 +35,37 @@ data:extend {
         default_value = 0.25,
         minimum_value = 0.0,
         maximum_value = 1.0,
+        order = "e",
     },
     {
         type = "bool-setting",
         name = "jq-delevel-to-normal",
         setting_type = "startup",
         default_value = false,
+        order = "f",
+    },
+    {
+        type = "string-setting",
+        name = "jq-quality-no-quality-items",
+        setting_type = "startup",
+        default_value = "",
+        allow_blank = true,
+        order = "za",
+    },
+    {
+        type = "string-setting",
+        name = "jq-quality-no-quality-subgroups",
+        setting_type = "startup",
+        default_value = "",
+        allow_blank = true,
+        order = "zb",
+    },
+    {
+        type = "string-setting",
+        name = "jq-quality-no-quality-groups",
+        setting_type = "startup",
+        default_value = "",
+        allow_blank = true,
+        order = "zc",
     },
 }
