@@ -2,6 +2,7 @@
 Version: 0.1.28
 Date: ????
   Changes:
+    - Ordered settings rather than random
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.27
 Date: 2024-01-27
